# ozzy

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
action/: README.md  action.yml
apps/web/: build.ts  package.json
apps/web/src/: App.tsx  frontend.tsx  index.css  index.html  telemetry.ts
apps/web/src/components/: AccountCard.tsx  ApiKeysSection.tsx  AuthPromptCard.tsx  ProjectsSection.tsx  SecretsSection.tsx  StatusMessage.tsx  components.test.tsx  types.ts
crates/oz-api/: Cargo.toml  build.rs  wrangler.toml
crates/oz-api/migrations/: 0002_tower_sessions.sql
crates/oz-api/src/: error.rs  lib.rs  openapi.rs  session_store.rs  state.rs
crates/oz-api/src/auth/: github.rs  mod.rs
crates/oz-api/src/crypto/: mod.rs
crates/oz-api/src/db/: api_keys.rs  mod.rs  oauth.rs  profiles.rs  projects.rs  secrets.rs
crates/oz-api/src/routes/: mod.rs
crates/oz-api/src/ui/: index.html
crates/oz-cli/: Cargo.toml
crates/oz-cli/src/: client.rs  config.rs  main.rs  telemetry.rs
crates/oz-core/: Cargo.toml
crates/oz-core/src/: authz.rs  lib.rs  models.rs  slug.rs  tokens.rs
crates/ozzy-api/: Cargo.toml  build.rs
crates/ozzy-api/migrations/: 0001_init.sql
crates/ozzy-api/src/: openapi.rs  state.rs
crates/ozzy-api/src/auth/: github.rs  mod.rs
crates/ozzy-api/src/crypto/: mod.rs
crates/ozzy-api/src/db/: api_keys.rs  oauth.rs  profiles.rs  projects.rs  secrets.rs
crates/ozzy-api/src/routes/: mod.rs
crates/ozzy-cli/: Cargo.toml
crates/ozzy-cli/src/: client.rs  config.rs  main.rs  telemetry.rs
crates/ozzy-core/: Cargo.toml
crates/ozzy-core/src/: authz.rs  tokens.rs
docs/: README.md  cli-usage.md  deployment.md  http-api.md  local-development.md  openapi-and-sdk.md  privacy.md  project-overview.md  tooling-and-scripts.md  versioning.md  web-ui-usage.md  wrangler.md
