[package]
name = "cli"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "oz"
path = "src/main.rs"

[dependencies]
oz-core = { path = "../oz-core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
wiremock = "0.6"
predicates = "3"
tempfile = "3"
