[package]
name = "ozzy-api"
version = "0.1.0"
edition = "2021"
authors = ["Geoff Seemueller <geoff@seemueller.io>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ozzy-core = { path = "../ozzy-core" }
worker = { version = "0.8", features = ["http", "axum", "d1"] }
worker-macros = { version = "0.8", features = ["http"] }
axum = { version = "0.8", default-features = false, features = ["json", "form", "query", "matched-path", "original-uri"] }
utoipa = { version = "5", features = ["macros"] }
tower-service = "0.3.3"
tower-http = { version = "0.6", default-features = false, features = ["set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "wasm-bindgen"] }
thiserror = "2"
urlencoding = "2"
subtle = "2"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
sha2 = "0.10"
hmac = "0.12"
getrandom = { version = "0.3", features = ["wasm_js"] }
url = "2"
tower-sessions = "0.15.0"
async-trait = "0.1.89"

[dev-dependencies]
proptest = "1"

[build-dependencies]
ozzy-core = { path = "../ozzy-core" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["macros"] }
