[package]
name = "cli"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "ozzy"
path = "src/main.rs"

[dependencies]
ozzy-core = { path = "../ozzy-core" }
anon-telemetry = "0.3.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }

[dev-dependencies]
assert_cmd = "2"
wiremock = "0.6"
predicates = "3"
tempfile = "3"
